APPDEV-5463 fixing thanksgiving-actions alignment
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@54564 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/bundle-product.css
+++ b/projects/Media/docroot/assets/css/pdp/bundle-product.css
@@ -93,8 +93,9 @@
 .thxgiving-actions {
   display:inline-block;
   vertical-align: top;
-  width:250px;
-  padding-left:25px;
+  width:265px;
+  padding-left:10px;
+  box-sizing: border-box;
 }
 
 .thxgiving-actions .action-item {
